hphp/hack/test/typecheck/readonly/function_pointer_readonly_this.php.rust_elab.exp
File "function_pointer_readonly_this.php", line 10, characters 26-29:
Cannot use `self::` in a function pointer in a non-final class due to class context ambiguity. Consider using `ReadonlyA::defaultHandler` instead (Naming[2113])
